Correction Overflow & Amélioration Navbar

--- a/src/app/components/Home/Homepage.module.css
+++ b/src/app/components/Home/Homepage.module.css
@@ -1,12 +1,13 @@
 .homepageContainer {
   z-index: -1;
+  width: 100vw;
 }
 
 .homepageContent {
   margin-top: 2rem;
   z-index: 2;
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -69,4 +70,9 @@
 .download:hover {
   transition: ease-in-out 0.3s;
   color: #a3dabb;
+}
+
+.artistes {
+  background-color: aqua;
+  margin-top: 2rem;
 }
